# mcap-rs

./: Cargo.toml  LICENSE.md  README.md
examples/mcapcat/: main.rs
examples/mcapcopy/: main.rs
examples/recover/: main.rs
src/: io_utils.rs  lib.rs  read.rs  read_utils.rs  records.rs  write.rs
tests/: attachment.rs  compression.rs  flush.rs  message.rs  metadata.rs  round_trip.rs
