[package]
name = "mcap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.9.2"
byteorder = "1.4"
crc32fast = "1.3.2"
log = "0.4"
lz4 = "1.0"
paste = "1.0.7"
thiserror = "1.0.31"
zstd = { version = "0.11", features = ["zstdmt"] }

[dev-dependencies]
anyhow = "1.0"
atty = "0.2"
camino = "1.0"
clap = { version = "3.2", features = ["derive"]}
memmap = "0.7"
simplelog = "0.12"
