[package]
name = "mcap"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 3 # Profiling!

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.9"
byteorder = "1.4"
crc32fast = "1.3"
log = "0.4"
lz4 = "1.0"
num_cpus = "1.13"
paste = "1.0"
thiserror = "1.0"
zstd = { version = "0.11", features = ["zstdmt"] }

[dev-dependencies]
anyhow = "1.0"
atty = "0.2"
camino = "1.0"
clap = { version = "3.2", features = ["derive"]}
itertools = "0.10"
memmap = "0.7"
rayon = "1.5"
simplelog = "0.12"
tempfile = "3.3"
